--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ python:
  - "3.3"
  - "pypy"
 install:
- - python setup.py install
+ - pip install --no-deps -e .
 script:
  - python -m unittest baraag.tests.test_evernote
